--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@ console.log("This file last modified " + docMod); // generates message in javaSc
     left: 0vw;
     z-index: 1;
 }
+	
+<canvas width="300" height="225"></canvas>
+	
+}
+	
+	
 </style>
 
 <body>
