--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	<p>Content goes here.</p>
 	<canvas width="300" height="225"></canvas>
 	<canvas id="a" width="300" height="225"></canvas>
-	var a_canvas = document.getElementById("a");
+	function draw_b() {
+  var b_canvas = document.getElementById("b");
+  var b_context = b_canvas.getContext("2d");
+  b_context.fillRect(50, 25, 150, 100);
+}
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
