trying to add button to draw rectangle

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 var docMod = document.lastModified; // loads last modified time stamp into docMod variable
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
+
+function drawRectangle() {
+	var aRectangle = document.getElememtByID("a");
+	var aContext = aRectangle.getContext("2d");
+	aContext.fillRect(100,100,75,100);
+}
+	
 </script>
 
 
@@ -69,17 +76,19 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 </div>
 	
 <div id="content" class="w3-container">
-	<p>Content goes here.</p>
-	<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
-	function draw_b() {
-  var b_canvas = document.getElementById("b");
-  var b_context = b_canvas.getContext("2d");
-  b_context.fillRect(50, 25, 150, 100);
-}
+	
 		
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
+</div>
+	
+<div>
+	<canvas id = "a" width = "400" class = "clear" style = "border:1px solid;float:center"></canvas>
+</div>
+
+<div>
+	<a onclick = "drawRectangle();" class="w3-btn w3-grey w3-round">Draw Rectangle </a>
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
