--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function drawRectangle() {
 </div>
 
 <div>
-	<a onclick = "drawRectangle();" class="w3-btn w3-grey w3-round">Draw Rectangle </a>
+	<a onclick = "drawRectangle();" class="w3-btn w3-black w3-round">Draw Rectangle </a>
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
