--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 
 function drawRectangle() {
 	var cRectangle = document.getElememtByID("a");
-	var cContext = aRectangle.getContext("2d");
-	aContext.fillRect(75,75,50,75);
+	var cContext = cRectangle.getContext("2d");
+	cContext.fillRect(75,75,50,75);
 }
 	
 </script>
