--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ alert("This file last modified " + docMod); // generates alert box with time sta
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 
 function drawRectangle() {
-	var cRectangle = document.getElememtByID("a");
-	var cContext = cRectangle.getContext("2d");
-	cContext.fillRect(75,75,50,75);
+	var c_Rectangle = document.getElememtByID("a");
+	var c_Context = c_Rectangle.getContext("2d");
+	c_Context.fillRect(50,25,150,100);
 }
 	
 </script>
@@ -84,7 +84,7 @@ function drawRectangle() {
 </div>
 	
 <div>
-	<canvas id = "c" width = "400" class = "clear" style = "border:1px solid;float:center"></canvas>
+	<canvas id = "a" width = "400" class = "clear" style = "border:1px solid;float:center"></canvas>
 </div>
 
 <div>
