--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ alert("This file last modified " + docMod); // generates alert box with time sta
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 
 function drawRectangle() {
-	var c_Rectangle = document.getElememtByID("a");
-	var c_Context = c_Rectangle.getContext("2d");
-	c_Context.fillRect(50,25,150,100);
+	var a_Rectangle = document.getElememtByID("a");
+	var a_Context = a_Rectangle.getContext("2d");
+	a_Context.fillRect(50,25,150,100);
 }
 	
 </script>
