--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ alert("This file last modified " + docMod); // generates alert box with time sta
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 
 function drawRectangle() {
-	var a_Rectangle = document.getElememtByID("a");
-	var a_Context = a_Rectangle.getContext("2d");
+	var a_canvas = document.getElememtByID("a");
+	var a_Context = a_canvas.getContext("2d");
 	a_Context.fillRect(50,25,150,100);
 }
 	
