trying to draw rectangle

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function drawRectangle() {
 </div>
 	
 <div>
-	<canvas id = "a" width = "400" class = "clear" style = "border:1px solid;float:center"></canvas>
+	<canvas id = "a" width = "400" class = "clear" style = "border : 1px solid #000000;"></canvas>
 </div>
 
 <div>
