trying to fix rectangle on click

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ function drawRectangle() {
 </div>
 	
 <div>
-	<canvas id = "a" width = "400" class = "clear" style = "border : 1px solid #000000;"></canvas>
+	<center><canvas id = "a" width = "400" class = "clear" style = "border : 1px solid #000000;"></canvas>
 </div>
 
 <div>
-	<a onclick = "drawRectangle();" class="w3-btn w3-black w3-round">Draw Rectangle </a>
+	<center><button onclick = "drawRectangle;">Draw Rectangle</button><center>
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
