fixing function and variable

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function drawRectangle() {
 <div>
 	<center><button onclick = "drawRectangle;">Draw Rectangle</button><center>
 	
-	<center><button onclick = "draw_name();">Draw Name</button><center>
+	<center><button onclick = "drawName;">Draw Name</button><center>
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
