--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html> 
 <html> 
-<!-- The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only.  Any user of this code does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.
- 
+<!-- The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only.  Any user of this code does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code. 
 THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
- 
- 
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
- 
+Author 2 
 Further Information:
-http://cns.utexas.edu/fri
- 
+http://cns.utexas.edu/fri 
 Research Educator:
 Timothy Riedel
 triedel@utexas.edu
- 
 Brief Description of Goal of Code:
 blah, blah, blah,
- 
 Known Issues:
 blah, blah, blah, blah
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
 -->
-	
-   <head> 
+  <head> 
       <title>App6---HTML5-Canvas</title>  
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="apple-mobile-web-app-capable" content="yes">
@@ -81,11 +73,7 @@ function drawRectangle() {
 </div>
 	
 <div id="content" class="w3-container">
-	<center><canvas id = "a" width = "400" class = "clear" style = "border : 1px solid #000000;"></canvas>
-
-		
-	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
- 	
+	<center><canvas id = "a" width = "300" height = "200" style = "border : 1px solid #000000;"></canvas><center> 	
 
 		
 	
@@ -93,6 +81,9 @@ function drawRectangle() {
 	
 	<center><button onclick = "drawName;">Draw Name</button><center>
 
+		
+<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at     Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code          does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p> 		
+<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>		
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
 </footer>
