--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function drawRectangle() {
 	a_Context.fillRect(50,25,150,100);
 }
 
-	function drawName {   
+function drawName {   
    var a_canvas = document.getElementById("a");
    var a_context = a_canvas.getContext("2d");
    a_context.fillText("Christian Martinez", 50, 75); 
@@ -77,7 +77,7 @@ function drawRectangle() {
 
 		
 	
-	<center><button onclick = "drawRectangle;">Draw Rectangle</button><center>
+	<center><button onclick = "drawRectangle();">Draw Rectangle</button><center>
 	
 	<center><button onclick = "drawName;">Draw Name</button><center>
 
