--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ var docMod = document.lastModified; // loads last modified time stamp into docMo
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 
-function drawRectangle() {
+function draw_a() {
 	var a_canvas = document.getElememtByID("a");
 	var a_Context = a_canvas.getContext("2d");
 	a_Context.fillRect(50,25,150,100);
@@ -42,6 +42,7 @@ function drawName {
    var a_context = a_canvas.getContext("2d");
    a_context.fillText("Christian Martinez", 50, 75); 
 }
+
 </script>
 
 
@@ -77,7 +78,7 @@ function drawName {
 
 		
 	
-	<center><button onclick = "drawRectangle();">Draw Rectangle</button><center>
+	<center><button onclick = "draw_a();">Draw Rectangle</button><center>
 	
 	<center><button onclick = "drawName;">Draw Name</button><center>
 
