--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ var docMod = document.lastModified; // loads last modified time stamp into docMo
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 
-function draw_a() {
+function drawRectanle() {
 	var a_canvas = document.getElememtByID("a");
 	var a_Context = a_canvas.getContext("2d");
 	a_Context.fillRect(50,25,150,100);
 }
 
-function drawName {   
+function drawName() {   
    var a_canvas = document.getElementById("a");
    var a_context = a_canvas.getContext("2d");
    a_context.fillText("Christian Martinez", 50, 75); 
@@ -78,9 +78,9 @@ function drawName {
 
 		
 	
-	<center><button onclick = "draw_a();">Draw Rectangle</button><center>
+	<center><button onclick = "drawRectanlge();">Draw Rectangle</button><center>
 	
-	<center><button onclick = "drawName;">Draw Name</button><center>
+	<center><button onclick = "drawName();">Draw Name</button><center>
 
 		
 <p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at     Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code          does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p> 		
