changing capital C in context on rectangle function to c

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 function drawRectangle() {
    var a_canvas = document.getElementById("a");
    var a_context = a_canvas.getContext("2d");
-   a_Context.fillRect(50,25,35,50);
+   a_context.fillRect(50,25,35,50);
 }
 
 function drawName() {   
