--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@ function drawName() {
    var a_context = a_canvas.getContext("2d");
    a_context.fillText("Christian Martinez", 50, 125); 
 }
+	
+function drawImage() {
+   var a_canvas = document.getElementByID("a");
+   var a_context = a_canvas.gerContext("2d");
+   var dog = new Image();
+   dog.src = "images/dog.png";
+   context.drawImage (dog, 0, 0);
+}
 
 </script>
 
@@ -81,6 +89,8 @@ function drawName() {
 	<center><button onclick = "drawRectangle();">Draw Rectangle</button><center>
 	
 	<center><button onclick = "drawName();">Draw Name</button><center>
+		
+	<center><button onclick = "drawImage();">Draw Image</button><center>
 
 		
 <p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at     Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code          does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p> 		
