--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function drawName() {
 }
 	
 function drawImage() {
-   var a_canvas = document.getElementByID("a");
+   var a_canvas = document.getElementById("a");
    var a_context = a_canvas.gerContext("2d");
    var dog = new Image();
    dog.src = "images/dog.png";
