edited spelling error

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function drawName() {
 	
 function drawImage() {
    var a_canvas = document.getElementById("a");
-   var a_context = a_canvas.gerContext("2d");
+   var a_context = a_canvas.getContext("2d");
    var dog = new Image();
    dog.src = "images/dog.png";
    context.drawImage (dog, 0, 0);
