trying to code correctly to draw dog

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function drawImage() {
    var a_canvas = document.getElementById("a");
    var a_context = a_canvas.getContext("2d");
    var dog = new Image();
-   dog.src = "images/dog.png";
+   dog.src = "images/dog.jpeg";
    context.drawImage (dog, 0, 0);
 }
 
