--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ function drawImage() {
    var a_context = a_canvas.getContext("2d");
    var dog = new Image();
    dog.src = "images/dog.jpeg";
-   a_context.drawImage (dog, 0, 0);
+   a_context.drawImage (dog.jpeg, 0, 0);
 }
 
 </script>
