editing dog.src

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ function drawImage() {
    var a_canvas = document.getElementById("a");
    var a_context = a_canvas.getContext("2d");
    var dog = new Image();
-   dog.src = "images/dog.jpeg";
-   a_context.drawImage (dog.jpeg, 0, 0);
+	dog.src = "dog.jpeg";
+   a_context.drawImage (dog, 0, 0);
 }
 
 </script>
