--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@ function drawImage() {
    a_context.drawImage(dog, 0, 0);
 }
 
+function clearCanvas(){
+   var a_canvas = document.getElementById("a");
+   var a_context = a_canvas.getContext("2d");
+   a_context.clearRect(100,100,100,100);
+}
 </script>
 
 
@@ -91,6 +96,8 @@ function drawImage() {
 	<center><button onclick = "drawName();">Draw Name</button><center>
 		
 	<center><button onclick = "drawImage();">Draw Image</button><center>
+	
+	<center><button onclick = "clearCanvas();">Clear Canvas</button><center>
 
 		
 <p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at     Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code          does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p> 		
